// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimeSearch renders default 1`] = `
.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c11 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c8::-moz-focus-inner {
  border-style: none;
}

.c8.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c9 {
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: #fff;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 36px;
  min-width: 36px;
  color: #e9ebf0;
  padding: 8px 6px;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1.2rem;
  line-height: 1.42857143;
  border-radius: 6px;
}

.c9:hover {
  background-color: rgba(255,255,255,0.08);
}

.c9.Mui-disabled {
  background-color: transparent;
  color: rgba(255,255,255,0.3);
}

.c9:hover {
  background-color: #3c3f43;
}

.c9.Mui-disabled {
  color: rgb(255 255 255 / 25%);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 {
  gap: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  gap: 16px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 {
  font-weight: 700;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
}

.c17 {
  font-weight: 700;
  color: white;
  font-size: 1rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -16px;
  width: calc(100% + 16px);
  margin-left: -16px;
}

.c12 > .MuiGrid-item {
  padding-top: 16px;
}

.c12 > .MuiGrid-item {
  padding-left: 16px;
}

.c13 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 100%;
}

.c14 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  --width: calc( ( 100vw - 3 * 16px - 2 * 72px ) / 4 );
  --height: calc(var(--width) * 0.64);
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c14:hover {
  z-index: 10;
}

.c16 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background-image: linear-gradient( to top, rgba(0,0,0,0.7), rgba(0,0,0,0.5) 20%, rgba(0,0,0,0) 40% );
  padding: 16px;
}

.c15 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.c2 {
  overflow-y: overlay;
  padding-bottom: 32px;
  height: 100%;
  position: relative;
}

.c3 {
  padding: 32px 64px;
}

@media print {
  .c8 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c9:hover {
    background-color: transparent;
  }
}

@media (min-width:500px) {
  .c13 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 50%;
  }
}

@media (min-width:800px) {
  .c13 {
    -webkit-flex-basis: 33.333333%;
    -ms-flex-preferred-size: 33.333333%;
    flex-basis: 33.333333%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 33.333333%;
  }
}

@media (min-width:1000px) {
  .c13 {
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 25%;
  }
}

@media (max-width:1000px) {
  .c14 {
    --width: calc( ( 100vw - 2 * 16px - 2 * 72px ) / 3 );
    --height: calc(var(--width) * 0.64);
  }
}

@media (max-width:800px) {
  .c14 {
    --width: calc( ( 100vw - 1 * 16px - 2 * 72px ) / 2 );
    --height: calc(var(--width) * 0.64);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width:500px) {
  .c14 {
    --width: calc( ( 100vw - 0 * 16px - 2 * 72px ) / 1 );
    --height: calc(var(--width) * 0.64);
  }
}

<body>
  <div>
    <div
      class="c0 c1 c2"
      style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="c0 c1 c3"
        style="padding: 32px 64px;"
      >
        <div
          class="c4 c5"
          style="align-items: center;"
        >
          <h2
            class="c6"
            style="font-size: 1.5rem; white-space: pre;"
          >
            Resultados de
             
            <span
              style="opacity: 0.8;"
            >
              "
              anime name to search
              "
            </span>
          </h2>
          <div
            class="c7"
          />
          <button
            aria-label="Cerrar"
            class="c8 MuiButtonBase-root c9 MuiIconButton-root MuiIconButton-sizeMedium"
            data-mui-internal-clone-element="true"
            data-testid="anime-search-close-button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c10 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
              data-testid="CloseRoundedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
              />
            </svg>
            <span
              class="c11 MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c12 MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
        >
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 0"
                  class="c15"
                  src="image url 0"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 0
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 1"
                  class="c15"
                  src="image url 1"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 1
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 2"
                  class="c15"
                  src="image url 2"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 2
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 3"
                  class="c15"
                  src="image url 3"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 3
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 4"
                  class="c15"
                  src="image url 4"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 4
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 3500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 5"
                  class="c15"
                  src="image url 5"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 5
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 4000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 6"
                  class="c15"
                  src="image url 6"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 6
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 4500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 7"
                  class="c15"
                  src="image url 7"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 7
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 5000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 8"
                  class="c15"
                  src="image url 8"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 8
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 5500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 9"
                  class="c15"
                  src="image url 9"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 9
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 10"
                  class="c15"
                  src="image url 10"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 10
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 11"
                  class="c15"
                  src="image url 11"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 11
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="waypoint-div"
          >
            [Waypoint]
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AnimeSearch renders default when loading 1`] = `
.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c11 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c8::-moz-focus-inner {
  border-style: none;
}

.c8.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c9 {
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: #fff;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 36px;
  min-width: 36px;
  color: #e9ebf0;
  padding: 8px 6px;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1.2rem;
  line-height: 1.42857143;
  border-radius: 6px;
}

.c9:hover {
  background-color: rgba(255,255,255,0.08);
}

.c9.Mui-disabled {
  background-color: transparent;
  color: rgba(255,255,255,0.3);
}

.c9:hover {
  background-color: #3c3f43;
}

.c9.Mui-disabled {
  color: rgb(255 255 255 / 25%);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 {
  gap: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  gap: 16px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 {
  font-weight: 700;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -16px;
  width: calc(100% + 16px);
  margin-left: -16px;
}

.c12 > .MuiGrid-item {
  padding-top: 16px;
}

.c12 > .MuiGrid-item {
  padding-left: 16px;
}

.c13 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 100%;
}

.c14 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  --width: calc( ( 100vw - 3 * 16px - 2 * 72px ) / 4 );
  --height: calc(var(--width) * 0.64);
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c14:hover {
  z-index: 10;
}

.c2 {
  overflow-y: overlay;
  padding-bottom: 32px;
  height: 100%;
  position: relative;
}

.c3 {
  padding: 32px 64px;
}

@media print {
  .c8 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c9:hover {
    background-color: transparent;
  }
}

@media (min-width:500px) {
  .c13 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 50%;
  }
}

@media (min-width:800px) {
  .c13 {
    -webkit-flex-basis: 33.333333%;
    -ms-flex-preferred-size: 33.333333%;
    flex-basis: 33.333333%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 33.333333%;
  }
}

@media (min-width:1000px) {
  .c13 {
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 25%;
  }
}

@media (max-width:1000px) {
  .c14 {
    --width: calc( ( 100vw - 2 * 16px - 2 * 72px ) / 3 );
    --height: calc(var(--width) * 0.64);
  }
}

@media (max-width:800px) {
  .c14 {
    --width: calc( ( 100vw - 1 * 16px - 2 * 72px ) / 2 );
    --height: calc(var(--width) * 0.64);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width:500px) {
  .c14 {
    --width: calc( ( 100vw - 0 * 16px - 2 * 72px ) / 1 );
    --height: calc(var(--width) * 0.64);
  }
}

<body>
  <div>
    <div
      class="c0 c1 c2"
      style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="c0 c1 c3"
        style="padding: 32px 64px;"
      >
        <div
          class="c4 c5"
          style="align-items: center;"
        >
          <h2
            class="c6"
            style="font-size: 1.5rem; white-space: pre;"
          >
            Resultados de
             
            <span
              style="opacity: 0.8;"
            >
              "
              anime name to search
              "
            </span>
          </h2>
          <div
            class="c7"
          />
          <button
            aria-label="Cerrar"
            class="c8 MuiButtonBase-root c9 MuiIconButton-root MuiIconButton-sizeMedium"
            data-mui-internal-clone-element="true"
            data-testid="anime-search-close-button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c10 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
              data-testid="CloseRoundedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
              />
            </svg>
            <span
              class="c11 MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c12 MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
        >
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 1;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.9857142857142858;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.9714285714285714;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.9571428571428571;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 1700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.9428571428571428;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 2200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.9285714285714286;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 2700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.9142857142857143;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 3200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.9;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 3700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.8857142857142857;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 4200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.8714285714285714;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 4700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.8571428571428572;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 5200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.8428571428571429;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 5700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.8285714285714285;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 6200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 6200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.8142857142857143;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 6700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 6700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.8;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 7200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 7200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.7857142857142857;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 7700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 7700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.7714285714285715;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 8200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 8200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.7571428571428571;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 8700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 8700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.7428571428571429;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 9200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 9200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.7285714285714286;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 9700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 9700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.7142857142857143;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 10200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 10200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.7;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 10700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 10700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.6857142857142857;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 11200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 11200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.6714285714285715;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 11700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 11700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.6571428571428571;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 12200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 12200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.6428571428571428;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 12700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 12700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.6285714285714286;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 13200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 13200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.6142857142857143;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 13700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 13700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.6;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 14200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 14200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.5857142857142856;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 14700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 14700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.5714285714285714;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 15200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 15200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.5571428571428572;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 15700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 15700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.5428571428571429;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 16200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 16200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.5285714285714286;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 16700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 16700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.5142857142857142;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 17200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 17200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.5;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 17700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 17700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AnimeSearch renders default when loading more 1`] = `
.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c11 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c8::-moz-focus-inner {
  border-style: none;
}

.c8.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c9 {
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: #fff;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 36px;
  min-width: 36px;
  color: #e9ebf0;
  padding: 8px 6px;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1.2rem;
  line-height: 1.42857143;
  border-radius: 6px;
}

.c9:hover {
  background-color: rgba(255,255,255,0.08);
}

.c9.Mui-disabled {
  background-color: transparent;
  color: rgba(255,255,255,0.3);
}

.c9:hover {
  background-color: #3c3f43;
}

.c9.Mui-disabled {
  color: rgb(255 255 255 / 25%);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 {
  gap: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  gap: 16px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 {
  font-weight: 700;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
}

.c17 {
  font-weight: 700;
  color: white;
  font-size: 1rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -16px;
  width: calc(100% + 16px);
  margin-left: -16px;
}

.c12 > .MuiGrid-item {
  padding-top: 16px;
}

.c12 > .MuiGrid-item {
  padding-left: 16px;
}

.c13 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 100%;
}

.c14 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  --width: calc( ( 100vw - 3 * 16px - 2 * 72px ) / 4 );
  --height: calc(var(--width) * 0.64);
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c14:hover {
  z-index: 10;
}

.c16 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background-image: linear-gradient( to top, rgba(0,0,0,0.7), rgba(0,0,0,0.5) 20%, rgba(0,0,0,0) 40% );
  padding: 16px;
}

.c15 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.c2 {
  overflow-y: overlay;
  padding-bottom: 32px;
  height: 100%;
  position: relative;
}

.c3 {
  padding: 32px 64px;
}

@media print {
  .c8 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c9:hover {
    background-color: transparent;
  }
}

@media (min-width:500px) {
  .c13 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 50%;
  }
}

@media (min-width:800px) {
  .c13 {
    -webkit-flex-basis: 33.333333%;
    -ms-flex-preferred-size: 33.333333%;
    flex-basis: 33.333333%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 33.333333%;
  }
}

@media (min-width:1000px) {
  .c13 {
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 25%;
  }
}

@media (max-width:1000px) {
  .c14 {
    --width: calc( ( 100vw - 2 * 16px - 2 * 72px ) / 3 );
    --height: calc(var(--width) * 0.64);
  }
}

@media (max-width:800px) {
  .c14 {
    --width: calc( ( 100vw - 1 * 16px - 2 * 72px ) / 2 );
    --height: calc(var(--width) * 0.64);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width:500px) {
  .c14 {
    --width: calc( ( 100vw - 0 * 16px - 2 * 72px ) / 1 );
    --height: calc(var(--width) * 0.64);
  }
}

<body>
  <div>
    <div
      class="c0 c1 c2"
      style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="c0 c1 c3"
        style="padding: 32px 64px;"
      >
        <div
          class="c4 c5"
          style="align-items: center;"
        >
          <h2
            class="c6"
            style="font-size: 1.5rem; white-space: pre;"
          >
            Resultados de
             
            <span
              style="opacity: 0.8;"
            >
              "
              anime name to search
              "
            </span>
          </h2>
          <div
            class="c7"
          />
          <button
            aria-label="Cerrar"
            class="c8 MuiButtonBase-root c9 MuiIconButton-root MuiIconButton-sizeMedium"
            data-mui-internal-clone-element="true"
            data-testid="anime-search-close-button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c10 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
              data-testid="CloseRoundedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
              />
            </svg>
            <span
              class="c11 MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c12 MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
        >
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 0"
                  class="c15"
                  src="image url 0"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 0
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 1"
                  class="c15"
                  src="image url 1"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 1
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 2"
                  class="c15"
                  src="image url 2"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 2
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 3"
                  class="c15"
                  src="image url 3"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 3
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 4"
                  class="c15"
                  src="image url 4"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 4
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 3500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 5"
                  class="c15"
                  src="image url 5"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 5
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 4000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 6"
                  class="c15"
                  src="image url 6"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 6
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 4500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 7"
                  class="c15"
                  src="image url 7"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 7
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 5000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 8"
                  class="c15"
                  src="image url 8"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 8
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 5500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 9"
                  class="c15"
                  src="image url 9"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 9
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 10"
                  class="c15"
                  src="image url 10"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 10
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              data-testid="anime-entry-wrapper"
              style="opacity: 1; webkit-transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 6000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                data-testid="anime-entry-background"
              >
                <img
                  alt="anime name 11"
                  class="c15"
                  src="image url 11"
                />
                <div
                  class="c16"
                  data-testid="anime-details-entry-anime-info"
                >
                  <h3
                    class="c17"
                  >
                    anime name 11
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 1;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.9545454545454546;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.9090909090909091;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.8636363636363636;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 1700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.8181818181818181;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 2200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.7727272727272727;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 2700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.7272727272727273;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 3200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.6818181818181819;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 3700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.6363636363636364;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 4200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.5909090909090908;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 4700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 4700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.5454545454545454;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 5200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
          <div
            class="c13 MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
            style="opacity: 0.5;"
          >
            <div
              style="opacity: 1; webkit-transition: opacity 5700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 5700ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <div
                class="c14"
                style="cursor: default;"
              >
                <div
                  animation="pulse"
                  variant="rectangular"
                >
                  Skeleton:Mock
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AnimeSearch renders default when no results 1`] = `
.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c11 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c8::-moz-focus-inner {
  border-style: none;
}

.c8.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c9 {
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: #fff;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 36px;
  min-width: 36px;
  color: #e9ebf0;
  padding: 8px 6px;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1.2rem;
  line-height: 1.42857143;
  border-radius: 6px;
}

.c9:hover {
  background-color: rgba(255,255,255,0.08);
}

.c9.Mui-disabled {
  background-color: transparent;
  color: rgba(255,255,255,0.3);
}

.c9:hover {
  background-color: #3c3f43;
}

.c9.Mui-disabled {
  color: rgb(255 255 255 / 25%);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 {
  gap: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  gap: 16px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 {
  font-weight: 700;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -16px;
  width: calc(100% + 16px);
  margin-left: -16px;
}

.c12 > .MuiGrid-item {
  padding-top: 16px;
}

.c12 > .MuiGrid-item {
  padding-left: 16px;
}

.c2 {
  overflow-y: overlay;
  padding-bottom: 32px;
  height: 100%;
  position: relative;
}

.c3 {
  padding: 32px 64px;
}

@media print {
  .c8 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c9:hover {
    background-color: transparent;
  }
}

<body>
  <div>
    <div
      class="c0 c1 c2"
      style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="c0 c1 c3"
        style="padding: 32px 64px;"
      >
        <div
          class="c4 c5"
          style="align-items: center;"
        >
          <h2
            class="c6"
            style="font-size: 1.5rem; white-space: pre;"
          >
            No hay resultados para
             
            <span
              style="opacity: 0.8;"
            >
              "
              anime name to search
              "
            </span>
          </h2>
          <div
            class="c7"
          />
          <button
            aria-label="Cerrar"
            class="c8 MuiButtonBase-root c9 MuiIconButton-root MuiIconButton-sizeMedium"
            data-mui-internal-clone-element="true"
            data-testid="anime-search-close-button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c10 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
              data-testid="CloseRoundedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.3 5.71a.9959.9959 0 0 0-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
              />
            </svg>
            <span
              class="c11 MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c12 MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
        >
          <div
            data-testid="waypoint-div"
          >
            [Waypoint]
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
